// Copyright 2021 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.metasrv.grpc.proto";
option java_outer_classname = "MetaProtobuf";

package meta;

import "request.proto";

message Empty {}

message RaftRequest { string data = 1; }

message RaftReply {
  string data = 1;
  string error = 2;
}

message MemberListRequest { string data = 1; }

message MemberListReply { repeated string data = 1; }

message HandshakeRequest {
  uint64 protocol_version = 1;
  bytes payload = 2;
}

message HandshakeResponse {
  uint64 protocol_version = 1;
  bytes payload = 2;
}

message Auth {
  string username = 2;
  string password = 3;
}

// Data chunk for export/import meta data
message ExportedChunk { repeated string data = 10; }

message WatchRequest {
  // key is the key to register for watching.
  string key = 1;

  // `key_end`` is the end of the range [key, key_end) to watch.
  // If key_end is None, then watch only key.
  // If want to watch prefix of key, use `get_start_and_end_of_prefix` to
  // generate [key, key_end).
  optional string key_end = 2;

  enum FilterType {
    // recv all kind update event.
    ALL = 0;
    // filter only update event.
    UPDATE = 1;
    // filter only delete event.
    DELETE = 2;
  }
  FilterType filter_type = 3;
}

message Event {
  string key = 1;

  // current hold current value of key(if any)
  optional SeqV current = 2;

  // prev value of key(if any)
  optional SeqV prev = 3;
}

message WatchResponse { Event event = 1; }

// messages for txn
message TxnCondition {
  // condition result
  enum ConditionResult {
    EQ = 0;
    GT = 1;
    GE = 2;
    LT = 3;
    LE = 4;
    NE = 5;
  }

  string key = 1;

  oneof target {
    // used when compare value
    bytes value = 2;
    // used when compare seq
    uint64 seq = 3;
  }

  // the expected result of condition, if `expected` match the condition result,
  // then the `if_then` op will be executed, otherwise `else_then` op will be
  // executed.
  ConditionResult expected = 4;
}

message TxnOp {
  oneof request {
    TxnGetRequest get = 1;
    TxnPutRequest put = 2;
    TxnDeleteRequest delete = 3;
    TxnDeleteByPrefixRequest delete_by_prefix = 4;
  }
}

message TxnOpResponse {
  oneof response {
    TxnGetResponse get = 1;
    TxnPutResponse put = 2;
    TxnDeleteResponse delete = 3;
    TxnDeleteByPrefixResponse delete_by_prefix = 4;
  }
}

message TxnRequest {
  // `condition` is a list of predicates.
  // If all of them success, the `if_then` will be executed,
  // otherwise `else_then` op will be executed.
  repeated TxnCondition condition = 1;

  // `if_then` is a list of operations will be executed when all condition
  // evaluates to true.
  repeated TxnOp if_then = 2;

  // `else_then` is a list of operations will be executed when not all condition
  // evaluates to true.
  repeated TxnOp else_then = 3;
}

message TxnReply {
  bool success = 1;
  repeated TxnOpResponse responses = 2;
  string error = 3;
}

service RaftService {

  rpc Write(RaftRequest) returns (RaftReply) {}

  /// Forward a request to other
  rpc Forward(RaftRequest) returns (RaftReply) {}

  // raft RPC

  rpc AppendEntries(RaftRequest) returns (RaftReply);
  rpc InstallSnapshot(RaftRequest) returns (RaftReply);
  rpc Vote(RaftRequest) returns (RaftReply);
}

service MetaService {
  // handshake
  rpc Handshake(stream HandshakeRequest) returns (stream HandshakeResponse);

  // message
  rpc WriteMsg(RaftRequest) returns (RaftReply);
  rpc ReadMsg(RaftRequest) returns (RaftReply);

  // Export all meta data.
  //
  // Including raft hard state, logs and state machine.
  // The exported data is a list of json strings in form of `(tree_name,
  // sub_tree_prefix, key, value)`.
  rpc Export(Empty) returns (stream ExportedChunk);

  // Add watch key stream.
  // Whenever the watch key data updated, client will be notified accross the
  // stream.
  rpc Watch(WatchRequest) returns (stream WatchResponse);

  rpc Transaction(TxnRequest) returns (TxnReply);

  // Get MetaSrv member list endpoints
  rpc MemberList(MemberListRequest) returns (MemberListReply);
}
